# Server/api/openapi.yaml
@@ -28,8 +28,10 @@ tags:
     description: >-
       resource representing one user to which the task with ID taskID is
       assigned
+  - name: 'tasks/{taskId}/assignees/{userId}/completion'
+    description: resource representing the completion of the task taskId for the user userID
   - name: 'tasks/{taskId}/completion'
-    description: resource representing the completion of the the task with ID taskID
+    description: resource representing the completion of the the entire task with ID taskID
   - name: tasks/assignments
     description: resource representing the assignments of tasks to users
   - name: users
@@ -467,6 +469,47 @@ paths:
         - name: userId
           in: path
           description: ID of the user to remove
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '204':
+          description: Successful operation - No Content
+          content: {}
+        '401':
+          description: Unauthorized
+          content: {}
+        '403':
+          description: Forbidden
+          content: {}
+        '404':
+          description: Not Found
+          content: {}
+        '500':
+          description: Internal Server Error
+          content: {}
+  '/api/tasks/{taskId}/assignees/{userId}/completion':
+    put:
+      tags:
+        - 'tasks/{taskId}/assignees/{userId}/completion'
+      security:
+        - cookieAuth: []
+      summary: Complete a task for a user
+      description: >-
+        The task with ID taskId is marked as completed for user UserId. This operation can only be performed by an assignee of the task.
+      operationId: completeUserTask
+      parameters:
+        - name: taskId
+          in: path
+          description: ID of the task
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - name: userId
+          in: path
+          description: ID of the user
           required: true
           schema:
             type: integer
